--- a/style.css
+++ b/style.css
@@ -266,9 +266,10 @@ footer {
 
 .ytBoxItem {
   color: white;
-  font-size: 2rem;
+  font-size: 3rem;
   display: inline-block;
   padding: 0rem 3rem;
+  font-weight: 400;
 }
 .videobox {
   display: inline-block;
